--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="/client/node_modules/dracula-ui/styles/dracula-ui.css" />
 </head>
-<body>
+<body class="drac-box drac-bg-black">
   <app-root></app-root>
 </body>
 </html>
